Fixing Alignment
Adding h2 to the class list in main.css then added text-align to it.

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 html, body {
 	font-family: "Lucida Console", Monaco, monospace;
-	margin: 1;
+	margin: 0;
 	width: 100%;
 	height: 100%;
 }
@@ -20,6 +20,10 @@ div {
 	padding-right: 30px;
 	height: 100%;
 	width: 100%;
+}
+
+h2 {
+	text-align: center;
 }
 
 .nav {
